# competitive-programming

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/competitive_programming/: __init__.py  reachable_numbers.py
