[project]
name = "competitive-programming"
version = "0.1.0"
description = "Code solutions for competitive programming problems"
authors = [
    {name = "Fredrick Mungai",email = "fmungai1@competitive.programming"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "competitive_programming", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
unfixable = [
    "ERA",  # do not autoremove commmented out code
]
extend-select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ERA",  # flake8-eradicate/eradicate
    "N",    # pep8-naming
    "PIE",  # flake8-pie
    "PGH",  # pygrep
    "RUF",  # ruff checks
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.black]
target-version = ["py312"]
preview = true

[tool.isort]
profile = "black"
force_grid_wrap = 2
